# NeqLIPS

./: .gitignore  .gitmodules  LICENSE  README.md  analyzer.py  auto.py  generate_dataset.py  prove.py  run.sh  temp  temp.pub  viz.py
Evan_chen_results/P1/: prove_log.txt
Evan_chen_results/P11/: prove_log.txt
Evan_chen_results/P13/: prove_log.txt
Evan_chen_results/P14/: prove_log.txt
Evan_chen_results/P15/: prove_log.txt
Evan_chen_results/P16/: prove_log.txt
Evan_chen_results/P17/: prove_log.txt
Evan_chen_results/P18/: prove_log.txt
Evan_chen_results/P19/: prove_log.txt
Evan_chen_results/P2/: prove_log.txt
Evan_chen_results/P20/: prove_log.txt
Evan_chen_results/P21/: prove_log.txt
Evan_chen_results/P22/: prove_log.txt
Evan_chen_results/P23/: prove_log.txt
Evan_chen_results/P24/: prove_log.txt
Evan_chen_results/P25/: prove_log.txt
Evan_chen_results/P26/: prove_log.txt
Figures/: proof.json
IMO_results/: best_match_summary.json
IMO_results/P1/: prove_log.txt
Installation/: Dockerfile  Readme.md  env.yml  install.sh
LIPS/: __init__.py  args.py  logger_config.py  prover.py
LIPS/egg_matching/: Cargo.toml  README.md
LIPS/egg_matching/src/: lang.rs  lib.rs  main.rs  pat.rs
Results/: proof.json
collected_unknown_dataset/: file_mapping.txt  unknown_010.smt2  unknown_014.smt2  unknown_017.smt2  unknown_018.smt2  unknown_021.smt2  unknown_023.smt2  unknown_026.smt2  unknown_027.smt2  unknown_029.smt2  unknown_031.smt2  unknown_035.smt2  unknown_039.smt2  unknown_045.smt2  unknown_047.smt2
collected_unknowns/: collection_summary.json
(+257106 files in other folders)
